@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-29T08:27:46Z",
+  "timestamp" : "2022-09-30T08:32:12Z",
   "count_outdated" : 143,
   "uniques_outdated" : 99,
-  "count" : 149,
-  "uniques" : 105,
+  "count" : 150,
+  "uniques" : 106,
   "clones" : [
     {
       "timestamp": "2022-09-18T00:00:00Z",
@@ -42,6 +42,13 @@
     },
     {
       "timestamp": "2022-09-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-30T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
